--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Depends:
     R (>= 2.10)
 Imports:
     e1071
-License: GPL-3 + file LICENSE
+License: GPL-3
 Suggests:
     ggplot2 (>= 2.1.0),
     dplyr,
